# stateweave

./: .gitignore  ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  demo.tape  docker-compose.yml  llms.txt  pyproject.toml  stateweave-schema-v1.json  stateweave.json
.agent/workflows/: redteam.md
.agents/workflows/: redteam.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: adapter-matrix.yml  ci.yml  deploy-website.yml  redteam-audit.yml  stateweave-ci.yml  uce.yml
blog/: why-we-built-stateweave.md
board/: MANIFEST.md
board/governance/: AUDIT_LEDGER.md  BOARD_OUTPUT_TEMPLATE.md  SSOT_CHARTER.md  UNIFICATION_LAWS.md
board/intelligence/: GTM_PLAYBOOK.md  LANGGRAPH_INTEGRATION.md  MCP_INTEGRATION.md
board/sessions/: 2026-03-13_adoption_remediation_review.md  2026-03-13_post_remediation_verdict.md  2026-03-13_production_readiness.md
breakdown/: audit_history.jsonl  competitive_analysis.md  launch_playbook.md  red_team_analysis.md
content/: blog_post.md  hn_post.md  reddit_posts.md  twitter_thread.md
docs/: mkdocs.yml
docs/api/: adapters.md  delta.md  diff.md  encryption.md  merge.md  observability.md  schema.md  serializer.md
docs/contributing/: architecture.md  setup.md  uce.md
docs/docs/: index.md
docs/getting-started/: concepts.md  quickstart.md
docs/guides/: adapter-health.md  building-adapter.md  cross-framework-roundtrip.md  encrypted-migration.md  mcp-server.md  migration-guide.md  rest-api.md  smart-checkpointing.md  zero-loss-translations.md
docs/security/: encryption.md  overview.md  signing.md
examples/: demo_recording.py  encrypted_signed_migration.py  four_way_migration.py  framework_migration_demo.py  full_demo.py  quickstart.py  real_framework_demo.py  real_langgraph_demo.py  real_langgraph_integration.py  viral_demo.py
examples/sandbox_escape/: README.md  sandbox_escape.py
research/analysis/: 01_multi_persona_deep_analysis.md  02_research_findings.md
research/decisions/: final_decision.md  gemini_research_packages.md  strategic_synthesis.md
research/gemini_raw/: 01_deep_research_initial.md  02_gemini_counter_analysis.md
scripts/: accessibility_audit.py  bench_checkpoint.py  record_demo.sh  redteam_audit.py  redteam_diff.py  supply_chain_audit.py  uce.py
sdk/typescript/: package.json
stateweave/: __init__.py  auto.py  cli.py  completions.py  rest_api.py
stateweave/a2a/: __init__.py  bridge.py
stateweave/adapters/: __init__.py  autogen_adapter.py  base.py  crewai_adapter.py  dspy_adapter.py  haystack_adapter.py  langgraph_adapter.py  letta_adapter.py  llamaindex_adapter.py  mcp_adapter.py  openai_agents_adapter.py  (+1 more)
website/: .firebaserc  firebase.json  index.html  package-lock.json  package.json  vite.config.js
(+120 files in other folders)
